manifests/network-policies/default-deny.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny
  namespace: cilium-demo
spec:
  endpointSelector: {}
  ingress:
  - {}
  egress:
  - {}
